# source-distributed

./: .gitignore  Cargo.toml  README.md  jwks  notes.md
.github/workflows/: sscs.yaml
src/: cargo.rs  create-layout.rs  create-steps.rs  crypto.rs  git.rs  keygen.rs  layout.rs  lib.rs  steps.rs
src/steps/: clone-project.rs  run-tests.rs
sscs/in-toto/: .gitignore  create-layout.py  create-steps.sh  in-toto-key-import.py  verify.sh  workflow.sh
sscs/in-toto/artifacts/: main.bundle  main.tar
sscs/in-toto/artifacts/main/: clone-project.20d0ec23.link  clone-project.6e006cb3.link  clone-project.9d5f0524.link  clone-project.d89e82a8.link  source-distributed-layout.json
