[package]
name = "source-distributed"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
serde_json = "1.0.85"
sigstore = { version = "0.6.0", default-features = false, features = ["rustls-tls"] }
#sigstore = { path = "../sigstore/sigstore-rs", default-features = false, features = ["rustls-tls"] }
url = "2.2.2"
x509-parser = { version = "0.14.0", features = ["verify"] }
tokio = { version = "1.17.0", features = ["full"] }
openidconnect = { version = "2.3", default-features = false, features = [ "reqwest" ] }
home = "0.5.4"
cargo_toml = "0.13.0"
cargo = "0.66.0"
git2 = "0.15.0"
#in-toto = {git = "https://github.com/in-toto/in-toto-rs.git", branch="master"}
#in-toto = {path = "../in-toto-rs"}
in-toto = { git = "https://github.com/danbev/in-toto-rs.git", branch="ecdsa-support-with-json" }
chrono = { version = "0.4", features = [ "serde" ] }
anyhow = "1.0.68"
log = "0.4.17"
env_logger = "0.10.0"
jsonwebtoken = "8.2.0"
sha2 = "0.10.6"
base16ct = "0.1.1"

[lib]
name = "source_distributed"
path = "src/lib.rs"

[[bin]]
name = "cargo-in-toto-sign"
path = "src/bin/cargo-in-toto-sign.rs"

[[bin]]
name = "cargo-in-toto-verify"
path = "src/bin/cargo-in-toto-verify.rs"

[[bin]]
name = "project-hash"
path = "src/bin/project-hash.rs"

[[bin]]
name = "index-dir-hash"
path = "src/bin/index-dir-hash.rs"
